deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tugaspnt-deployment
  labels:
    app: tugaspnt
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tugaspnt
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: tugaspnt
    spec:
      containers:
      - name: tugaspnt-container
        image: juansaputro/pnt-tugas1:v0.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 200m
