service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tugaspnt-service
spec:
  selector:
    app: tugaspnt                
  ports:
  - protocol: TCP
    port: 80                      
    targetPort: 8080              
  type: LoadBalancer
