ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tugaspnt-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - tugaspnt
    secretName: tugaspnt-tls
  rules:
  - host: tugaspnt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tugaspnt-service
            port:
              number: 80
